--- a/manifest.json
+++ b/manifest.json
@@ -2,19 +2,19 @@
 {
     "manifest_version": 2,
     "name": "SagiousPass",
-    "description": "Safer password for all",
+    "description": "Helps you change and find password easier, which you can remember later on. And even if you forget it just find it here :)",
     "version": "1.0.0",
     "icons": {
-        "16": "",
-        "46": "",
-        "128": ""
+        "16": "/images/logo_16.png",
+        "46": "/images/logo_48.png",
+        "128": "/images/logo_128.png"
     },
 
-    "page_auction":{
+    "page_action":{
         "default_icon": {
-            "16":"",
-            "48":"",
-            "128":""
+            "16": "/images/icon_16.png",
+            "48": "/images/icon_48.png",
+            "128": "/images/icon_128.png"
         }
     }
 }
