--- a/manifest.json
+++ b/manifest.json
@@ -9,15 +9,6 @@
         "46": "/images/logo_48.png",
         "128": "/images/logo_128.png"
     },
-
-    "page_action":{
-        "default_icon": {
-            "16": "/images/icon_16.png",
-            "48": "/images/icon_48.png",
-            "128": "/images/icon_128.png"
-        }
-    },
-
     
     "content_scripts": [
         {
@@ -26,7 +17,18 @@
             ],
             "js": ["Content.js"]
         }
-    ]
+    ],
+
+    "background": {
+        "scripts": ["background.js"]
+    },
+
+   
+    "browser_action":{
+        "default_icon": "/images/icon_16.png",
+        "48": "/images/icon_48.png",
+        "128": "/images/icon_128.png"
+    }
 
     
 
