--- a/manifest.json
+++ b/manifest.json
@@ -23,11 +23,12 @@
         "scripts": ["background.js"]
     },
 
-   
     "browser_action":{
         "default_icon": "/images/icon_16.png",
         "48": "/images/icon_48.png",
-        "128": "/images/icon_128.png"
+        "128": "/images/icon_128.png",
+        "default_popup": "index.html", 
+        "default_title": "Test your password here!"
     }
 
     
