--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "SagiousPass",
     "description": "Helps you change and find password easier, which you can remember later on. And even if you forget it just find it here :)",
     "version": "1.0.0",
@@ -10,6 +10,13 @@
         "128": "/images/logo_128.png"
     },
     
+    "permissions": ["storage", "webNavigation", "scripting"],
+
+    "host_permissions": [
+        "https://*/*",
+        "https://*/*"
+    ],
+
     "content_scripts": [
         {
             "matches": [
@@ -20,17 +27,16 @@
     ],
 
     "background": {
-        "scripts": ["background.js"]
+        "service_worker": "background.js"
     },
 
-    "browser_action":{
+    "action":{
         "default_icon": "/images/icon_16.png",
         "48": "/images/icon_48.png",
         "128": "/images/icon_128.png",
         "default_popup": "newTry/index.html", 
         "default_title": "Test your password here!"
     }
-
     
 
 }
